@@ -121,7 +121,7 @@ class seasons:
             data = urllib2.urlopen(url, timeout=30).read()
 
             zip = zipfile.ZipFile(StringIO.StringIO(data))
-            result = zip.read('en.zip.xml')
+            result = zip.read('en.xml')
             artwork = zip.read('banners.xml')
             zip.close()
 
@@ -135,7 +135,7 @@ class seasons:
                 data = urllib2.urlopen(url, timeout=30).read()
 
                 zip = zipfile.ZipFile(StringIO.StringIO(data))
-                result = zip.read('en.zip.xml')
+                result = zip.read('en.xml')
                 artwork = zip.read('banners.xml')
                 zip.close()
 
@@ -144,7 +144,7 @@ class seasons:
                 data = urllib2.urlopen(url, timeout=30).read()
 
                 zip = zipfile.ZipFile(StringIO.StringIO(data))
-                result2 = zip.read('%s.zip.xml' % lang)
+                result2 = zip.read('%s.xml' % lang)
                 zip.close()
             else:
                 result2 = result
@@ -540,7 +540,7 @@ class episodes:
         self.list = []
 
         self.trakt_link = 'https://api.trakt.tv'
-        self.tvmaze_link = 'http://api.tvmaze.com'
+        self.tvmaze_link = 'https://api.tvmaze.com'
         self.tvdb_key = 'Z2V0X3lvdXJz'
         self.datetime = (datetime.datetime.utcnow() - datetime.timedelta(hours = 5))
         self.systime = (self.datetime).strftime('%Y%m%d%H%M%S%f')
@@ -877,7 +877,7 @@ class episodes:
                 data = urllib2.urlopen(url, timeout=10).read()
 
                 zip = zipfile.ZipFile(StringIO.StringIO(data))
-                result = zip.read('%s.zip.xml' % lang)
+                result = zip.read('%s.xml' % lang)
                 artwork = zip.read('banners.xml')
                 zip.close()
 
@@ -1079,7 +1079,7 @@ class episodes:
                 data = urllib2.urlopen(url, timeout=10).read()
 
                 zip = zipfile.ZipFile(StringIO.StringIO(data))
-                result = zip.read('%s.zip.xml' % lang)
+                result = zip.read('%s.xml' % lang)
                 artwork = zip.read('banners.xml')
                 zip.close()
 
