@@ -501,8 +501,8 @@ elif action == 'changelog':
 
 elif action == 'cleanOathSettings':
     from resources.lib.modules import control
-    control.clean_settings("plugin.video.theoath")
+    control.clean_settings('plugin.video.theoath')
 
 elif action == 'cleanOathscrapersSettings':
     from resources.lib.modules import control
-    control.clean_settings("script.module.oathscrapers")
+    control.clean_settings('script.module.oathscrapers')
